# ghci-pretty

./: README.md  ghci-pretty.cabal
.github/workflows/: haskell-release.yml
app/: Main.hs
