Cabal-version: 2.4
Name: ghci-pretty
Version: 0.1.0
Synopsis: colored pretty-printing within ghci
description:
    A tiny package that combines the pretty-show package and
    the hscolour package to provide colored pretty-printing
    in ghci.
    .
    /Usage/
    .
    Add the following lines to your @ghci.conf@ file:
    .
    > -- Pretty printing of it
    > import Text.Show.Pretty.Colored
    > :set -interactive-print=Text.Show.Pretty.Colored.cpprint
    > :def cp (\_ -> return ":set -interactive-print=Text.Show.Pretty.Colored.cpprint")
    > :def ncp (\_ -> return ":set -interactive-print=print")
    .
    Now you can enable colored pretty-printing in ghci with the commmand
    .
    > :cp
    .
    The following command turns colored pretty-printing off again
    .
    > :ncp

Homepage: https://github.com/larskuhtz/ghci-pretty
License: MIT
License-file: LICENSE
Author: Lars Kuhtz
Maintainer: Lars Kuhtz <lakuhtz@gmail.com>
Copyright: Copyright (c) 2014 Lars Kuhtz <lakuhtz@gmail.com>
Category: Development
Build-type: Simple

extra-doc-files:
    README.md

source-repository head
    type: git
    location: https://github.com/larskuhtz/ghci-pretty

Library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Text.Show.Pretty.Colored

    build-depends:
        base >=4.5 && <5,
        pretty-show >= 1.9 && <2,
        hscolour >= 1.20 && <2

    ghc-options: -Wall

executable test-pretty
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    ghci-pretty
  default-language: Haskell2010
